--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "deploy": "npm run build && node ./deploy/ghpages.js"
   },
   "dependencies": {
     "axios": "^0.27.2",
